examples/datalog/18_advanced_patterns/64_correlation.dl
% Test: Correlated subquery pattern
% Expected: Filter based on aggregate of same group
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_correlation
.kg use test_correlation

+sales[(1, "A", 100), (2, "A", 150), (3, "A", 200), (4, "B", 300), (5, "B", 250)].

% Average per category
avg_per_cat(Cat, <AVG:Val>) :- sales(_, Cat, Val).

?- avg_per_cat(Cat, Avg).

.kg use default
.kg drop test_correlation
